tests/errors/2006-12.vb
'#compiler-options:/rootnamespace:
'#compiler-message:Command line error BC2006 : option 'rootnamespace' requires ':<string>'
'#exit-code:1